# CSListiPy

./: .env-example  .gitignore  LICENCE.md  README.md  main.py  pyproject.toml  requirements.txt  setlist.py  spotify.py
